[gd_scene load_steps=5 format=3 uid="uid://b128myar7a7y1"]

[ext_resource type="Script" uid="uid://tn051d30ouhs" path="res://ui/cell_details_panel/cell_details_panel.gd" id="1_tl2sj"]
[ext_resource type="Texture2D" uid="uid://drrup7wbb1mue" path="res://ui/cell_details_panel/Fire_Flame_Burn(Icon).png" id="2_o5trr"]
[ext_resource type="Script" uid="uid://dd7vxd77cm12g" path="res://ui/control/equal_hbox_container.gd" id="2_rhete"]
[ext_resource type="Texture2D" uid="uid://bfu1wwfe0eytf" path="res://ui/cell_details_panel/Heart_Health_HP(Icon).png" id="3_rhete"]

[node name="CellDetailsPanel" type="PanelContainer"]
offset_right = 8.0
offset_bottom = 8.0
scale = Vector2(1.25, 1.25)
script = ExtResource("1_tl2sj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="CellTitle" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"DetailTitleLabel"
text = "(cell title)"
text_overrun_behavior = 3

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 3

[node name="EnergyLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
theme_type_variation = &"FormLabel"
text = "Energy:"

[node name="EnergyEdit" type="LineEdit" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"FormValueLineEdit"
text = "0"
alignment = 2

[node name="EnergyHistoryLabel" type="Label" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"FormValueLabel"
text = "(0)"
horizontal_alignment = 2

[node name="NewEnergyLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
theme_type_variation = &"FormLabel"
text = "New Energy:"

[node name="NewEnergyEdit" type="LineEdit" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"FormValueLineEdit"
text = "0"
alignment = 2

[node name="NewEnergyHistoryLabel" type="Label" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"FormValueLabel"
text = "(0)"
horizontal_alignment = 2

[node name="EnergyWantedLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
theme_type_variation = &"FormLabel"
text = "Energy Wanted:"

[node name="EnergyWantedEdit" type="LineEdit" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"FormValueLineEdit"
text = "0"
alignment = 2

[node name="EnergyWantedHistoryLabel" type="Label" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"FormValueLabel"
text = "(0)"
horizontal_alignment = 2

[node name="LifeLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
theme_type_variation = &"FormLabel"
text = "Life:"

[node name="LifeEdit" type="LineEdit" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"FormValueLineEdit"
text = "0"
alignment = 2

[node name="LifeHistoryLabel" type="Label" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"FormValueLabel"
text = "(0)"
horizontal_alignment = 2

[node name="NewLifeLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
theme_type_variation = &"FormLabel"
text = "New Life:"

[node name="NewLifeEdit" type="LineEdit" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"FormValueLineEdit"
text = "0"
alignment = 2

[node name="NewLifeHistoryLabel" type="Label" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"FormValueLabel"
text = "(0)"
horizontal_alignment = 2

[node name="MaxLifeLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
theme_type_variation = &"FormLabel"
text = "Max Life:"

[node name="MaxLifeEdit" type="LineEdit" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"FormValueLineEdit"
text = "0"
alignment = 2

[node name="MaxLifeHistoryLabel" type="Label" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"FormValueLabel"
horizontal_alignment = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GeneContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
script = ExtResource("2_rhete")
metadata/_custom_type_script = ExtResource("2_rhete")

[node name="EnergyPanel" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(76, 73)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"Border"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/EnergyPanel"]
layout_mode = 2
theme_override_constants/separation = -7

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/EnergyPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/EnergyPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Energy"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/EnergyPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = -3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/EnergyPanel/VBoxContainer/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 10
texture = ExtResource("2_o5trr")
expand_mode = 1

[node name="CurrentEnergy" type="Label" parent="VBoxContainer/HBoxContainer/EnergyPanel/VBoxContainer"]
layout_mode = 2
tooltip_text = "Cell energy"
mouse_filter = 0
theme_override_font_sizes/font_size = 32
text = "999"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/EnergyPanel/VBoxContainer"]
layout_mode = 2

[node name="NewEnergy" type="Label" parent="VBoxContainer/HBoxContainer/EnergyPanel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
tooltip_text = "Energy gained"
mouse_filter = 0
text = "+99"

[node name="Spacer" type="Label" parent="VBoxContainer/HBoxContainer/EnergyPanel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AskEnergy" type="Label" parent="VBoxContainer/HBoxContainer/EnergyPanel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
tooltip_text = "Energy wanted"
mouse_filter = 0
text = "-99"

[node name="LifePanel" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(76, 73)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"Border"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/LifePanel"]
layout_mode = 2
theme_override_constants/separation = -7

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/LifePanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/LifePanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Life"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/LifePanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = -3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/LifePanel/VBoxContainer/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 10
texture = ExtResource("3_rhete")
expand_mode = 1

[node name="CurrentLife" type="Label" parent="VBoxContainer/HBoxContainer/LifePanel/VBoxContainer"]
layout_mode = 2
tooltip_text = "Current life"
mouse_filter = 0
theme_override_font_sizes/font_size = 32
text = "99"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/LifePanel/VBoxContainer"]
layout_mode = 2

[node name="NewLife" type="Label" parent="VBoxContainer/HBoxContainer/LifePanel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
tooltip_text = "Life gained"
mouse_filter = 0
text = "+99"
